src/main/resources/kubernetes/platform/platform-server-foundation-cluster.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-server-foundation-deployment
spec:
  selector:
    matchLabels:
      app: platform-server-foundation
  replicas: 2
  template:
    metadata:
      labels:
        app: platform-server-foundation
    spec:
      containers:
        - name: platform-server-foundation
          image: docker.oumasoft.com/platform/platform-server-foundation:2.0-RELEASE
          imagePullPolicy: Always
          ports:
            - containerPort: 8202
          volumeMounts:
            - mountPath: /log
              name: platform-server-foundation-data
          resources:
            requests:
              cpu: 300m
              memory: 300Mi
            limits:
              cpu: 1
              memory: 500Mi
      volumes:
        - name: platform-server-foundation-data
          nfs:
            path: /nfs/log
            server: 192.168.84.48
