src/main/resources/kubernetes/platform/platform-server-system-cluster.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-server-system-deployment
spec:
  selector:
    matchLabels:
      app: platform-server-system
  replicas: 3
  template:
    metadata:
      labels:
        app: platform-server-system
    spec:
      containers:
        - name: platform-server-system
          image: docker.oumasoft.com/platform/platform-server-system:2.0-RELEASE
          imagePullPolicy: Always
          ports:
            - containerPort: 8201
          #args:
            #- "--spring.profiles.active=prod"
          volumeMounts:
            - mountPath: /log
              name: platform-server-system-data
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 1
              memory: 1Gi
      volumes:
        - name: platform-server-system-data
          nfs:
            path: /nfs/log
            server: 192.168.84.48
