src/main/resources/kubernetes/platform/platform-gateway-cluster.yml
apiVersion: v1
kind: Service
metadata:
  name: platform-gateway-service
spec:
  ports:
    - port: 8301
      targetPort: 8301
  selector:
    app: platform-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-gateway-deployment
spec:
  selector:
    matchLabels:
      app: platform-gateway
  replicas: 3
  template:
    metadata:
      labels:
        app: platform-gateway
    spec:
      containers:
        - name: platform-gateway
          image: docker.oumasoft.com/platform/platform-gateway:2.0-RELEASE
          imagePullPolicy: Always
          ports:
            - containerPort: 8301
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - mountPath: /log
              name: platform-gateway-data
      volumes:
        - name: platform-gateway-data
          nfs:
            path: /nfs/log
            server: 192.168.84.48
