src/main/resources/kubernetes/platform/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: platform-ingress
spec:
  rules:
    - host: cloud.api.com
      http:
        paths:
          - path: /
            backend:
              serviceName: platform-gateway-service
              servicePort: 8301
